--- a/lab1_1/test/test.uvprojx
+++ b/lab1_1/test/test.uvprojx
@@ -88,7 +88,7 @@
             <nStopA1X>0</nStopA1X>
             <nStopA2X>0</nStopA2X>
           </AfterMake>
-          <SelectedForBatchBuild>0</SelectedForBatchBuild>
+          <SelectedForBatchBuild>1</SelectedForBatchBuild>
           <SVCSIdString></SVCSIdString>
         </TargetCommonOption>
         <CommonProperty>
@@ -369,7 +369,7 @@
             <ScatterFile></ScatterFile>
             <IncludeLibs></IncludeLibs>
             <IncludeLibsPath></IncludeLibsPath>
-            <Misc></Misc>
+            <Misc>--map</Misc>
             <LinkerInputFile></LinkerInputFile>
             <DisabledWarnings></DisabledWarnings>
           </LDads>
@@ -440,6 +440,9 @@
               <FilePath>.\FreeRTOS\fsl_tickless_systick.c</FilePath>
             </File>
           </Files>
+        </Group>
+        <Group>
+          <GroupName>MTB</GroupName>
         </Group>
       </Groups>
     </Target>
